--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.application.name=demo
+spring.datasource.url=jdbc:postgresql://localhost:5432/employee_dashboard_db
+spring.datasource.username=user
+spring.datasource.password=12345
+spring.datasource.driver-class-name=org.postgresql.Driver
+
