Implement Liquibase setup and missing table

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,21 @@
+# Your existing database config
 spring.datasource.url=jdbc:postgresql://localhost:5432/employee_dashboard_db
 spring.datasource.username=user
 spring.datasource.password=12345
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# Liquibase configuration (fixed)
+spring.liquibase.change-log=classpath:employee-dashboard-db/liquibase/changelog/db.changelog-master.xml
+spring.liquibase.enabled=true
+
+# JPA configuration
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+
+
+# Your existing properties...
+
+# Add debug logging for Liquibase
+logging.level.liquibase=DEBUG
+logging.level.org.springframework.boot.autoconfigure.liquibase=DEBUG
