Implement Admin getCurrentAdmin service and controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,13 @@ spring.datasource.username=user
 spring.datasource.password=12345
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# Connection pool settings for better debugging
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
+
 # Liquibase configuration (fixed)
 spring.liquibase.change-log=classpath:employee-dashboard-db/liquibase/changelog/db.changelog-master.xml
 spring.liquibase.enabled=true
@@ -13,9 +20,34 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
-
-# Your existing properties...
+# Enhanced Logging configuration for debugging
+logging.level.root=INFO
+logging.level.employee_management=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.jdbc=DEBUG
+logging.level.com.zaxxer.hikari=DEBUG
+logging.level.org.postgresql=DEBUG
 
 # Add debug logging for Liquibase
 logging.level.liquibase=DEBUG
 logging.level.org.springframework.boot.autoconfigure.liquibase=DEBUG
+
+# Console logging pattern with more detail
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
+
+# File logging (optional but recommended for debugging)
+logging.file.name=logs/employee-management.log
+logging.file.max-size=10MB
+logging.file.max-history=30
+
+# Show SQL statements with parameters (for debugging)
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Server configuration
+server.port=8080
+
+# Enable debug mode for detailed error information (helpful for troubleshooting)
+debug=true
+trace=false
